<resources>
  <string name="app_name">@string/call</string>
  <string name="action_settings">Settings</string>
  <string name="choose_number">Choose number</string>
  <string name="choose_app">Choose app</string>
  <string name="call">Call</string>
  <string name="title_activity_host">HostActivity</string>
  <string name="section_format">Hello World from section: %1$d</string>
  <string name="rules">Rules</string>
  <string name="contacts">Contacts</string>
  <string name="country_rule_description">For phone numbers from %1$s, dial using %2$s</string>
  <string name="country_rule_description_negated">For phone numbers not from %1$s, dial using %2$s</string>
  <string name="contact_rule_description">Dial %1$s using %2$s</string>
  <string name="add_rule">Add new rule</string>
  <string name="apply_rule_prompt">When making calls to phone numbers</string>
  <string name="dial_using_app_prompt">Dial using</string>
  <string name="from">from</string>
  <string name="not_from">not from</string>
  <string name="add">Add</string>
  <string name="no_countries_selected">No countries selected</string>
  <string name="delete">Delete</string>
  <string name="select_countries">Select countries</string>
  <string name="backspace">Backspace</string>
  <string name="add_custom_rule">Add custom rule</string>
  <string name="add_to_favourites">Add to Favourites</string>
  <string name="remove_from_favourites">Remove from Favourites</string>
  <string name="move_rule_up">Move rule up</string>
  <string name="move_rule_down">Move rule down</string>
  <string name="add_override">Set override for %1$s</string>
  <string name="always_use_whatsapp">Always use WhatsApp to call your WhatsApp contacts</string>
  <string name="use_contacts">Show contacts tab and allow contact rules</string>
  <string name="make_calls">Allow making calls without going to the dialer screen</string>
  <string name="whatsapp_warning">This rule will only apply when calling contacts who have WhatsApp</string>
  <string name="about">About</string>
  <string name="open_source_licences">Open source licenses</string>

  <string name="about_text">
    This dialer app allows you to set up rules for which app on your phone to use to make calls.

    \n\nThese rules can be based on the country of the outgoing call, as well as having custom overrides for known contacts.  To try it out, add your first rule now!
  </string>
</resources>
