<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/phone_number_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/apply_rule_prompt"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_prompt">

            <RadioButton
                android:id="@+id/fromRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="8dp"
                android:text="@string/from" />

            <RadioButton
                android:id="@+id/notFromRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="8dp"
                android:text="@string/not_from" />

        </RadioGroup>

        <TextView
            android:id="@+id/countriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/no_countries_selected"
            android:textColor="@color/textPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_parent" />

        <TextView
            android:id="@+id/call_using_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/dial_using_app_prompt"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countriesTextView" />

        <Spinner
            android:id="@+id/appSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call_using_prompt" />

        <TextView
            android:id="@+id/whatsAppWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatsapp_warning"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/appSpinner"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>