<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mainContent"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.sixbynine.dialerforwarder.MainActivity">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:layout_weight="1"
      android:background="?attr/colorPrimary"
      app:layout_scrollFlags="scroll|enterAlways"
      app:popupTheme="@style/AppTheme.PopupOverlay"
      app:title="@string/app_name">

    </android.support.v7.widget.Toolbar>

  </android.support.design.widget.AppBarLayout>

  <com.sixbynine.dialerforwarder.view.DisablableViewPager
      android:id="@+id/container"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/tabs"
      app:layout_constraintTop_toBottomOf="@+id/appbar" />

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/tabs"
    app:srcCompat="@drawable/ic_dialpad"/>

  <android.support.design.widget.TabLayout
      android:id="@+id/tabs"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:scaleY="-1"
      android:background="@android:color/white"
      android:layout_gravity="bottom"
      android:elevation="16dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent">

    <android.support.design.widget.TabItem
        android:id="@+id/tabRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"/>

    <android.support.design.widget.TabItem
        android:id="@+id/tabContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"/>

  </android.support.design.widget.TabLayout>

</android.support.constraint.ConstraintLayout>
